--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 <body>
     <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
     <img id="main-img" src="https://telegra.ph/file/d84f321d17af47e98c1d7.jpg" alt="Main Image">
+    <div id="taps-remaining">Taps remaining today: <span id="taps-remaining-value">0</span></div>
     <div class="nav-bar">
         <div class="nav-item">
             <div class="nav-emoji">👥</div>
