--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
             <button id="frens">Frens</button>
         </div>
         <div class="nav-item">
-            <div class="nav-emoji">👆</div>
+            <img class="nav-photo" src="https://telegra.ph/file/8bb0c010e042cf1e5224a.jpg" alt="Tap Photo">
             <button id="tap">Tap</button>
         </div>
         <div class="nav-item">
