--- a/main.html
+++ b/main.html
@@ -8,20 +8,21 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
+    <div id="username"> <span id="username-value">Unknown</span></div>
     <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
     <img id="main-img" src="https://telegra.ph/file/d84f321d17af47e98c1d7.jpg" alt="Main Image">
     <div class="nav-bar">
         <div class="nav-item">
             <div class="nav-emoji">👥</div>
-            <button id="frens">Frens</button>
+            <button id="frens">𝗙𝗿𝗲𝗻𝘀</button>
         </div>
         <div class="nav-item">
             <img class="nav-photo" src="https://telegra.ph/file/8bb0c010e042cf1e5224a.jpg" alt="Tap Photo">
-            <button id="tap">Tap</button>
+            <button id="tap">𝗧𝗮𝗽</button>
         </div>
         <div class="nav-item">
             <div class="nav-emoji">🚀</div>
-            <button id="boost">Boost</button>
+            <button id="boost">𝗕𝗼𝗼𝘀𝘁</button>
         </div>
     </div>
     <div id="popup" class="hidden"></div>
