--- a/main.html
+++ b/main.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>ETB TAP</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div id="username"> <span id="username-value">Unknown</span></div>
     <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
-    <img id="main-img" src="https://telegra.ph/file/d84f321d17af47e98c1d7.jpg" alt="Main Image">
+    <img id="main-img" src="https://telegra.ph/file/b081c532f3ce96ffd70a9.jpg" alt="ETB TAP">
     <div class="nav-bar">
         <div class="nav-item">
             <div class="nav-emoji">👥</div>
