--- a/main.html
+++ b/main.html
@@ -24,6 +24,10 @@
             <div class="nav-emoji">🚀</div>
             <button id="boost">𝗕𝗼𝗼𝘀𝘁</button>
         </div>
+        <div class="nav-item">
+            <div class="nav-emoji">🪙</div>
+            <button id="task">𝗧𝗮𝘀𝗸</button>
+        </div>
     </div>
     <div id="popup" class="hidden"></div>
     <script src="main.js"></script>
