--- a/main.html
+++ b/main.html
@@ -28,6 +28,10 @@
             <div class="nav-emoji">🪙</div>
             <button id="task">𝗧𝗮𝘀𝗸</button>
         </div>
+        <div class="nav-item" id="stats-item" style="display: none;">
+            <div class="nav-emoji">📊</div>
+            <button id="stats">𝗦𝘁𝗮𝘁𝘀</button>
+        </div>
     </div>
     <div id="popup" class="hidden"></div>
     <script src="main.js"></script>
