--- a/stats.html
+++ b/stats.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stats</title>
@@ -9,7 +31,8 @@
 </head>
 <body>
     <div id="stats-container">
-        <h1>Stats</h1>
+        <h1>📊</h1>
+        <h2>Stats from july 20</h2>
         <p>Total Users: <span id="total-users">0</span></p>
         <p>Total ETB Tapped: <span id="total-etb-tapped">0.0000</span> ETB</p>
         <button id="back-to-main">Back to Main</button>
