--- a/main.html
+++ b/main.html
@@ -8,28 +8,12 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <div id="username"> <span id="username-value">Unknown</span></div>
-    <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
-    <img id="main-img" src="https://telegra.ph/file/b081c532f3ce96ffd70a9.jpg" alt="ETB TAP">
-    <div class="nav-bar">
-        <div class="nav-item">
-            <div class="nav-emoji">👥</div>
-            <button id="frens">𝗙𝗿𝗲𝗻𝘀</button>
-        </div>
-        <div class="nav-item">
-            <img class="nav-photo" src="https://telegra.ph/file/8bb0c010e042cf1e5224a.jpg" alt="Tap Photo">
-            <button id="tap">𝗧𝗮𝗽</button>
-        </div>
-        <div class="nav-item">
-            <div class="nav-emoji">🚀</div>
-            <button id="boost">𝗕𝗼𝗼𝘀𝘁</button>
-        </div>
-        <div class="nav-item">
-            <div class="nav-emoji">🪙</div>
-            <button id="task">𝗧𝗮𝘀𝗸</button>
-        </div>
-    </div>
-    <div id="popup" class="hidden"></div>
+<div class="maintenance">
+ <h1 class="h1text">ETB TAP BOT <br> is under-maintenance</h1>
+ <marquee>ETB TAP</marquee>
+ <progress></progress>
+ <p class="ppp">it may take some minutes...</p>
+</div>
     <script src="main.js"></script>
 </body>
 </html>
