--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
  <h1 class="h1text">ETB TAP BOT <br> is under-maintenance</h1>
  <marquee>ETB TAP</marquee>
  <progress></progress>
- <p class="ppp">it may take some minutes...</p>
+ <p class="ppp">it may take some hours...</p>
 </div>
     <script src="main.js"></script>
 </body>
