--- a/main.html
+++ b/main.html
@@ -8,12 +8,39 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-<div class="maintenance">
- <h1 class="h1text">ETB TAP BOT <br> is under-maintenance</h1>
- <marquee>ETB TAP</marquee>
- <progress></progress>
- <p class="ppp">it may take some hours...</p>
+<div class="backg">
+    <div class="profile">
+        <img src="https://telegra.ph/file/6e98e255b1a12b7ee910f.jpg" alt="Profile Picture" id="profile-picture">
+        <div id="username">Unknown</div>
+    </div>
+    <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
 </div>
+    <div class="join-com">
+      <h1><a href="https://t.me/etb_tap_community" target="_blank">Join our community</a></h1>
+    </div>
+    <img id="main-img" src="tap-img.jpg" alt="ETB TAP">
+    <div class="nav-bar">
+        <div class="nav-item">
+            <div class="nav-emoji">👥</div>
+            <button id="frens">𝗙𝗿𝗲𝗻𝘀</button>
+        </div>
+        <div class="nav-item">
+            <div class="nav-emoji">🎲</div
+            <button id="tap">𝗧𝗮𝗽</button>
+        </div>
+        <div class="nav-item">
+            <div class="nav-emoji">🚀</div>
+            <button id="boost">𝗕𝗼𝗼𝘀𝘁</button>
+        </div>
+        <div class="nav-item">
+             <div class="new">
+               <h1 class="new-h1">new</h1>
+             </div>
+            <div class="nav-emoji">📤</div>
+            <button id="withdraw">𝗪𝗶𝘁𝗵𝗱𝗿𝗮𝘄</button>
+        </div>
+    </div>
+    <div id="popup" class="hidden"></div>
     <script src="main.js"></script>
 </body>
 </html>
