--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             <button id="frens">𝗙𝗿𝗲𝗻𝘀</button>
         </div>
         <div class="nav-item">
-            <div class="nav-emoji">🎲</div
+            <div class="nav-emoji">🎲</div> <!-- Fixed the missing closing tag here -->
             <button id="tap">𝗧𝗮𝗽</button>
         </div>
         <div class="nav-item">
