--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <div class="backg">
     <div class="profile">
         <img src="https://telegra.ph/file/6e98e255b1a12b7ee910f.jpg" alt="Profile Picture" id="profile-picture">
-        <div id="username">Unknown</div>
+        <div id="username-value">Unknown</div>
     </div>
     <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
 </div>
