--- a/main.html
+++ b/main.html
@@ -22,22 +22,22 @@
     <div class="nav-bar">
         <div class="nav-item">
             <div class="nav-emoji">👥</div>
-            <button id="frens">𝗙𝗿𝗲𝗻𝘀</button>
+            <button id="frens">Mate</button>
         </div>
         <div class="nav-item">
             <div class="nav-emoji">🎲</div> <!-- Fixed the missing closing tag here -->
-            <button id="tap">𝗧𝗮𝗽</button>
+            <button id="tap">Tap</button>
         </div>
         <div class="nav-item">
             <div class="nav-emoji">🚀</div>
-            <button id="boost">𝗕𝗼𝗼𝘀𝘁</button>
+            <button id="boost">Boost</button>
         </div>
         <div class="nav-item">
              <div class="new">
                <h1 class="new-h1">new</h1>
              </div>
             <div class="nav-emoji">📤</div>
-            <button id="withdraw">𝗪𝗶𝘁𝗵𝗱𝗿𝗮𝘄</button>
+            <button id="withdraw">Withdraw</button>
         </div>
     </div>
     <div id="popup" class="hidden"></div>
