--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 <div class="backg">
     <div class="profile">
-        <img src="https://telegra.ph/file/6e98e255b1a12b7ee910f.jpg" alt="Profile Picture" id="profile-picture">
+        <img src="avatar.png" alt="Profile Picture" id="profile-picture">
         <div id="username-value">Unknown</div>
     </div>
     <div id="balance">Balance: <span id="balance-value">0.0000</span> ETB</div>
@@ -19,6 +19,12 @@
       <h1><a href="https://t.me/etb_tap_community" target="_blank">Join our community</a></h1>
     </div>
     <img id="main-img" src="tap-img.jpg" alt="ETB TAP">
+    <img class="abeba3" width="55px" src="abeba.png" alt="abeba">
+    <img class="abeba" width="100px" src="abeba.png" alt="abeba">
+    <div class="year">
+      <img class="abeba2" width="70px" src="abeba.png" alt="abeba">
+      <img class="yearpic" width="250px" src="2017.png" alt="2017">
+    </div>
     <div class="nav-bar">
         <div class="nav-item">
             <div class="nav-emoji">👥</div>
